; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/cannonkeys/satisfaction75/extr_satisfaction_oled.c_draw_layer_section.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/cannonkeys/satisfaction75/extr_satisfaction_oled.c_draw_layer_section.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"LAYER\00", align 1
@PIXEL_ON = common dso_local global i32 0, align 4
@NORM = common dso_local global i32 0, align 4
@layer = common dso_local global i64 0, align 8
@XOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @draw_layer_section(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %17

9:                                                ; preds = %3
  %10 = load i64, i64* %4, align 8
  %11 = add nsw i64 %10, 1
  %12 = load i64, i64* %5, align 8
  %13 = add nsw i64 %12, 2
  %14 = load i32, i32* @PIXEL_ON, align 4
  %15 = load i32, i32* @NORM, align 4
  %16 = call i32 @draw_string(i64 %11, i64 %13, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %15, i32 0)
  br label %20

17:                                               ; preds = %3
  %18 = load i64, i64* %4, align 8
  %19 = sub nsw i64 %18, 32
  store i64 %19, i64* %4, align 8
  br label %20

20:                                               ; preds = %17, %9
  %21 = load i64, i64* %4, align 8
  %22 = add nsw i64 %21, 32
  %23 = load i64, i64* %5, align 8
  %24 = add nsw i64 %23, 1
  %25 = load i32, i32* @PIXEL_ON, align 4
  %26 = load i32, i32* @NORM, align 4
  %27 = call i32 @draw_rect_filled_soft(i64 %22, i64 %24, i32 9, i32 9, i32 %25, i32 %26)
  %28 = load i64, i64* %4, align 8
  %29 = add nsw i64 %28, 34
  %30 = load i64, i64* %5, align 8
  %31 = add nsw i64 %30, 2
  %32 = load i64, i64* @layer, align 8
  %33 = add nsw i64 %32, 48
  %34 = load i32, i32* @PIXEL_ON, align 4
  %35 = load i32, i32* @XOR, align 4
  %36 = call i32 @draw_char(i64 %29, i64 %31, i64 %33, i32 %34, i32 %35, i32 0)
  ret void
}

declare dso_local i32 @draw_string(i64, i64, i8*, i32, i32, i32) #1

declare dso_local i32 @draw_rect_filled_soft(i64, i64, i32, i32, i32, i32) #1

declare dso_local i32 @draw_char(i64, i64, i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
